--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,14 @@
   src: url("fonts/InterVariable-Italic.woff2") format("woff2");
 }
 
+:root {
+	--font-sans: "Inter", sans-serif;
+}
+
 body {
   font-family: "Inter", sans-serif;
-  color: #e3e3e3;
   font-size: 1em;
   text-align: left;
-  background-color: #303030;
   margin-bottom: 2.5em;
 }
 
@@ -35,10 +37,6 @@ pre {
   border: 1px solid #cacaca;
 }
 
-a {
-  color: #e3e3e3;
-}
-
 hr {
   border: 0;
   height: 1px;
@@ -53,7 +51,7 @@ hr {
 }
 
 h1 {
-  color: #59a2d8ff;
+  color: var(--color);
   font-size: 2em;
   font-weight: bold;
   text-align: center;
@@ -77,7 +75,7 @@ h3 {
   font-size: 1em;
   font-weight: bold;
   text-align: center;
-  margin-top: 1em;
+  margin-top: var(--gap);
   margin-bottom: 0.5em;
   line-height: 100%;
   letter-spacing: 1;
@@ -96,10 +94,10 @@ p {
 
 .caption {
   max-width: 60em;
-  font-size: 0.9em;
+  font-size: var(--font-size-small);
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1em;
+  margin-top: var(--gap);
   line-height: 1.5em;
   text-align: center;
 }
@@ -109,10 +107,9 @@ select {
   padding: 0.5em 0.5em;
   margin: 0.7em 0.3em;
   color: #fff;
-  background: #59a2d8ff;
+  background: var(--color);
   border: 0;
-  border-radius: 5px;
-  font: "Inter";
+  border-radius: var(--border-radius);
 }
 
 input[type="text"] {
@@ -120,7 +117,7 @@ input[type="text"] {
   padding: 0.5em 0.5em;
   margin: 0.7em 0.3em;
   border: 0px;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
 }
 
 input[type="password"] {
@@ -128,7 +125,7 @@ input[type="password"] {
   padding: 0.8em 0.8em;
   margin: 1em 1em;
   border: 0px;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
 }
 
 .select {
@@ -136,7 +133,7 @@ input[type="password"] {
   margin: 0.7em 0.3em;
   min-width: 10em;
   margin-right: 0.5em;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
 }
 
 .topcorner {
@@ -151,27 +148,26 @@ input[type="password"] {
   letter-spacing: 3px;
   background: #fff;
   border: solid;
-  border-radius: 5px;
-  font: 1em Inter;
+  border-radius: var(--border-radius);
   font-weight: bold;
 }
 
 .btn.primary {
   color: #fff;
-  background: #59a2d8ff;
-  border: solid #59a2d8ff;
+  background-color: var(--color);
+  border: solid var(--color);
 }
 
 .btn.green {
   color: #fff;
-  background: #00a529;
-  border: solid #00a529;
+  background: var(--color-success);
+  border: solid var(--color-success);
 }
 
 .btn.red {
   color: #fff;
-  background: #ff0000;
-  border: solid #ff0000;
+  background: var(--color-error);
+  border: solid var(--color-error);
 }
 
 .btn:hover,
@@ -196,7 +192,7 @@ a:hover {
   bottom: 0px;
   height: 1.5em;
   width: 100%;
-  background: #59a2d8ff;
+  background: var(--color);
 }
 
 /* https://www.imarketinx.de/artikel/responsive-image-gallery-with-css-grid.html */
