--- a/styles.css
+++ b/styles.css
@@ -229,3 +229,13 @@ a:hover {
 .gallery-img:hover {
   opacity: 0.5;
 }
+
+/* custum classes */
+
+.map {
+  z-index: 0;
+  margin: 1.5em auto;
+  max-width: 500px;
+  height: 350px;
+  border-radius: var(--border-radius);
+}
