--- a/styles.css
+++ b/styles.css
@@ -274,3 +274,7 @@ a:hover {
 .gallery-grid:hover > .gallery-img:not(:hover) {
 	opacity: 0.5;
 }
+
+input[type="search"] {
+	border: 1px solid var(--color-border);
+}
