--- a/styles.css
+++ b/styles.css
@@ -196,8 +196,7 @@ input[type="password"] {
   border: solid var(--color-red);
 }
 
-.btn:hover,
-a:hover {
+.btn:hover {
   opacity: 0.6;
 }
 
@@ -262,4 +261,21 @@ a:hover {
 
 input[type="search"] {
 	border: 1px solid var(--color-border);
+}
+
+a:not([class]) {
+	text-decoration: underline;
+	text-decoration-color: var(--color-link);
+	text-decoration-thickness: 2px;
+	text-decoration-skip-ink: auto;
+	cursor: pointer;
+}
+
+a:hover {
+	color: var(--color-link);
+}
+
+a:focus {
+	outline: 0.1em solid currentColor;
+	outline-offset: 0.2em;
 }
