--- a/styles.css
+++ b/styles.css
@@ -138,11 +138,13 @@ select {
   border-radius: var(--border-radius);
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="search"] {
   height: 2em;
   padding: 0.5em 0.5em;
   margin: 0.7em 0.3em;
-  border: 0px;
+  border: 0;
+  background-color: var(--color-bg-secondary);
   border-radius: var(--border-radius);
 }
 
@@ -258,10 +260,6 @@ input[type="password"] {
 .gallery-grid:hover > .gallery-frame:not(:hover) {
 	opacity: 0.5;
 	transition: all ease-in 0.2s;
-}
-
-input[type="search"] {
-	border: 1px solid var(--color-border);
 }
 
 a:not([class]) {
