--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,7 @@ input[type="password"] {
 .map {
   z-index: 0;
   margin: 1.5em auto;
-  max-width: 500px;
+  max-width: 100%;
   height: 350px;
   border-radius: var(--border-radius);
 }
