--- a/styles.css
+++ b/styles.css
@@ -297,6 +297,8 @@ a:visited {
 .img-main {
 	width: 100%;
 	border-radius: var(--border-radius);
+	margin-top: var(--gap);
+	margin-bottom: var(--gap);
 }
 
 .caption [src*=".svg"] {
